// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test cliParser should error on missing project name: missing-project-name-stdout 1`] = `
"  console.error
    jest.js <projectName>
    
    project name
    
    Positionals:
      projectName  project name                                             [string]
    
    Options:
      -v, --verbose       print additional logs                            [boolean]
      -i, --interactive   interactive mode                                 [boolean]
      -t, --typescript    use typescript                   [boolean] [default: true]
      -h, --husky         install husky pre-commit hook for building launcher
                                                           [boolean] [default: true]
      -s, --skip-install  write dependencies to package.json without installing
                                                                           [boolean]
      -c, --icon          override default launcher icon file               [string]
      -n, --node-version  override node version to bundle                   [string]
          --version       Show version number                              [boolean]
          --help          Show help                                        [boolean]

      at error (node_modules/yargs/build/index.cjs:2625:25)
      at Object.self.showHelp (node_modules/yargs/build/index.cjs:1100:9)
      at Object.Yargs.self.showHelp (node_modules/yargs/build/index.cjs:2495:17)
      at Object.fail (node_modules/yargs/build/index.cjs:701:27)
      at Object.positionalCount (node_modules/yargs/build/index.cjs:1452:19)
      at populatePositionals (node_modules/yargs/build/index.cjs:520:20)
      at Object.runCommand (node_modules/yargs/build/index.cjs:427:29)

"
`;

exports[`Test cliParser should print help with flags: --help: help-stdout 1`] = `
"  console.log
    jest.js <projectName>
    
    project name
    
    Positionals:
      projectName  project name                                             [string]
    
    Options:
      -v, --verbose       print additional logs                            [boolean]
      -i, --interactive   interactive mode                                 [boolean]
      -t, --typescript    use typescript                   [boolean] [default: true]
      -h, --husky         install husky pre-commit hook for building launcher
                                                           [boolean] [default: true]
      -s, --skip-install  write dependencies to package.json without installing
                                                                           [boolean]
      -c, --icon          override default launcher icon file               [string]
      -n, --node-version  override node version to bundle                   [string]
          --version       Show version number                              [boolean]
          --help          Show help                                        [boolean]

      at log (node_modules/yargs/build/index.cjs:2617:25)
          at Array.forEach (<anonymous>)

"
`;
